# MVGpuBTree

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  apis.md  reproduce.md  reproduce.sh
archived-figs/NVIDIA-A100-PCIE-40GB/: plot_blink_vs_versioned.txt  plot_concurrent_erase_find.txt  plot_concurrent_insert_range.txt  plot_concurrent_insert_range_reclamation_stats.txt  plot_concurrent_insert_range_vary_range.txt
archived-figs/Quadro-GV100/: plot_blink_vs_versioned.txt  plot_concurrent_erase_find.txt  plot_concurrent_insert_range.txt  plot_concurrent_insert_range_reclamation_stats.txt  plot_concurrent_insert_range_vary_range.txt
archived-figs/Tesla-V100-PCIE-32GB/: plot_blink_vs_versioned.txt  plot_concurrent_erase_find.txt  plot_concurrent_insert_range.txt  plot_concurrent_insert_range_reclamation_stats.txt
archived-results/NVIDIA-A100-PCIE-40GB/blink_vs_versioned/: rates.csv
archived-results/NVIDIA-A100-PCIE-40GB/versioned_find_erase/: rates_initial45M_update5.csv  rates_initial45M_update50.csv  rates_initial45M_update90.csv
archived-results/NVIDIA-A100-PCIE-40GB/versioned_insert_range/: memory_45m_45m_50_16.csv  rates_initial1M_update50_range_length32.csv  rates_initial1M_update50_range_length8.csv  rates_initial1M_update5_range_length32.csv  rates_initial1M_update5_range_length8.csv  rates_initial1M_update90_range_length32.csv  rates_initial1M_update90_range_length8.csv  rates_initial40M_update50_range_length32.csv  rates_initial40M_update50_range_length8.csv  rates_initial40M_update5_range_length32.csv  rates_initial40M_update5_range_length8.csv  rates_initial40M_update90_range_length32.csv  rates_initial40M_update90_range_length8.csv
archived-results/NVIDIA-A100-PCIE-40GB/versioned_insert_range_variable_range/: rates_initial0M_update50_num_ops5.csv  rates_initial1M_update50_num_ops5.csv  rates_initial40M_update50_num_ops5.csv
archived-results/Quadro-GV100/blink_vs_versioned/: rates.csv
archived-results/Quadro-GV100/versioned_find_erase/: rates_initial45M_update5.csv  rates_initial45M_update50.csv  rates_initial45M_update90.csv
archived-results/Quadro-GV100/versioned_insert_range/: memory_45m_45m_50_16.csv  rates_initial1M_update50_range_length32.csv  rates_initial1M_update50_range_length8.csv  rates_initial1M_update5_range_length32.csv  rates_initial1M_update5_range_length8.csv  rates_initial1M_update90_range_length32.csv  rates_initial1M_update90_range_length8.csv  rates_initial40M_update50_range_length32.csv  rates_initial40M_update50_range_length8.csv  rates_initial40M_update5_range_length32.csv  rates_initial40M_update5_range_length8.csv  rates_initial40M_update90_range_length32.csv  rates_initial40M_update90_range_length8.csv
archived-results/Quadro-GV100/versioned_insert_range_variable_range/: rates_initial0M_update50_num_ops5.csv  rates_initial1M_update50_num_ops5.csv  rates_initial40M_update50_num_ops5.csv
archived-results/Tesla-V100-PCIE-32GB/blink_vs_versioned/: rates.csv
archived-results/Tesla-V100-PCIE-32GB/versioned_find_erase/: rates_initial45M_update5.csv  rates_initial45M_update50.csv  rates_initial45M_update90.csv
archived-results/Tesla-V100-PCIE-32GB/versioned_insert_range/: memory_45m_20m_50_16.csv  memory_45m_20m_50_32.csv  memory_45m_20m_5_16.csv  memory_45m_20m_5_32.csv  memory_45m_20m_90_16.csv  memory_45m_20m_90_32.csv  memory_45m_45m_50_16.csv  memory_45m_45m_50_32.csv  memory_45m_45m_5_16.csv  memory_45m_45m_5_32.csv  memory_45m_45m_90_16.csv  memory_45m_45m_90_32.csv  rates_initial1M_update50_range_length32.csv  rates_initial1M_update50_range_length8.csv  rates_initial1M_update5_range_length32.csv  rates_initial1M_update5_range_length8.csv  rates_initial1M_update90_range_length32.csv  rates_initial1M_update90_range_length8.csv  rates_initial40M_update50_range_length32.csv  rates_initial40M_update50_range_length8.csv  rates_initial40M_update5_range_length32.csv  rates_initial40M_update5_range_length8.csv  rates_initial40M_update90_range_length32.csv  rates_initial40M_update90_range_length8.csv
archived-results/Tesla-V100-PCIE-32GB/versioned_insert_range_variable_range/: rates_initial0M_update50_num_ops5.csv  rates_initial1M_update50_num_ops5.csv  rates_initial40M_update50_num_ops5.csv
benchmarks/: CMakeLists.txt  concurrent_erase_find_bench.cu  concurrent_insert_range_bench.cu  concurrent_insert_range_reclaimer_bench.cu  concurrent_insert_range_variable_range_bench.cu  insert_find_bench.cu  insert_find_blink_bench.cu
cmake/: AutoDetectCudaArch.cmake  FindLibcudacxx.cmake
docker/: Dockerfile  Dockerfile.CUDA12p1  build.sh  environment.yml  run.sh
include/: CMakeLists.txt  btree_kernels.hpp  cmd.hpp  device_bump_allocator.hpp  gpu_blink_tree.hpp  gpu_btree.h  gpu_timer.hpp  gpu_versioned_blink_tree.hpp  host_allocators.hpp  macros.hpp  memory_reclaimer.hpp  memory_utils.hpp  node.hpp  pair_type.hpp  rkg.hpp  slab_alloc.hpp  utils.hpp  validation.hpp  versioned_node.hpp
include/detail/: pair.cuh  pair_detail.hpp
plots/: plot.sh  plot_blink_vs_versioned.py  plot_concurrent_erase_find.py  plot_concurrent_insert_range.py  plot_concurrent_insert_range_reclamation_stats.py  plot_concurrent_insert_range_vary_range.py
plots/figs/Tesla-V100-PCIE-32GB/: plot_blink_vs_versioned.txt  plot_concurrent_erase_find.txt  plot_concurrent_insert_range.txt  plot_concurrent_insert_range_reclamation_stats.txt  plot_concurrent_insert_range_vary_range.txt
results/Tesla-V100-PCIE-32GB/versioned_insert_range_variable_range/: rates_initial40M_update50_num_ops5.csv
scripts/: bench_blink.sh  bench_blink_vs_versioned.sh  bench_concurrent_erase_find.sh  bench_concurrent_insert_range.sh  bench_concurrent_insert_range_memory.sh  bench_concurrent_insert_range_vary_range.sh  rebuild.sh  slurm_run.sh  validation_tests.sh
test/: CMakeLists.txt  concurrent_insert_rq_vtree.cu  erase_test.cu  find_blink_test.cu  find_versioned_test.cu  repro_4.cu  test_bulk_build.cu  test_slab_alloc.cu  unittest_btree.cu  unittest_versioning.cu
test_scripts/: ncu.sh  run.sh
